# wissen-digital-ewb

./: .buildinfo  .env.example  .eslintrc.js  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .pylintrc  CONTRIBUTING.md  Dockerfile  Installation_basic.html  README.md  addingExplanationTextToSites.html  contentSecurityPolicy.html  criteria_catalog.html  daten.html  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  genindex.html  index.html  init.sh  insertLinksInDatabaseTexts.html  lint.txt  linting.html  listing_pages.html  loadProfiles.html  migrations.html  objects.inv  package-lock.json  package.json  plotlyApps.html  production.html  pyproject.toml  run  runUnittest.sh  save_page_views.html  search.html  searchindex.js  static_code_analysis.html  static_files.html  (+7 more)
dev/: csp.html  (+10 more)
webcentral/: .pylintrc  Dockerfile  pyproject.toml
webcentral/doc/: style_guide.md
webcentral/doc/01_data/: evaluation.py
webcentral/doc/01_data/01_pre_pro/: pre_enargus.py  pre_modul.py
webcentral/doc/01_data/02_tool_over/: 2022_02_22_EWB_Tools_Uebersicht.csv  2022_02_22_EWB_Tools_UebersichtModifiedLastUpdateFocusAndClassification.csv  2023_10_23_EWB_Tools_Uebersicht_v1.1.csv  2024_05_EWB_tools_with_english_translation.xlsx  2024_11_13_tools_new_logos.xlsx  2024_12_EWB_tools_with_english_translation.xlsx  2024_12_tools_with_weatherdata.xlsx  image_list.csv  toolClassificationFocus.csv  tools_with_weatherdata.xlsx
webcentral/doc/01_data/03_weatherdata/: 2022_03_29_weatherdata.csv
webcentral/doc/01_data/04_schlagwoerter/: schlagwoerter_skript.py
webcentral/doc/01_data/05_technical_standards/: norms.xlsx
webcentral/doc/01_data/07_publication/: publications.xlsx  publictions.xlsx
webcentral/doc/01_data/08_criteria_catalog/: criteria_catalog_betriebsoptimierung_20240912.xlsx  criteria_catalog_betriebsoptimierung_20240916.xlsx  integrationTestCriteriaCatalog.xlsx
webcentral/doc/01_data/10_business_models/: business-model-new.xlsx  data_business_models.xlsx
webcentral/doc/01_data/10_environmentalImpacts/: data_DataSufficiency.xlsx
webcentral/doc/01_data/12_component_list/: componentList.xlsx
webcentral/doc/01_data/13_data_sufficiency/: 20240912_data_sufficiency.xlsx  data_sufficency_translated.xlsx
webcentral/doc/01_data/14_use_cases/: 20240423_daten_use_cases.xlsx  (+1 more)
webcentral/doc/01_daten/: check_data_xml_xlsx.py  daten.md
webcentral/doc/03_weatherdata/: general_overview.md
webcentral/doc/06_sphinx/: Makefile
webcentral/src/: acceptChanges.py  manage.py  test_translation_use_cases.xlsx
webcentral/src/Datasets/: admin.py  apps.py  data_export.py  data_import.py  models.py  tests.py  translation.py  urls.py  views.py
webcentral/src/LastProfile/: apps.py  urls.py  views.py
webcentral/src/StartSearch/: apps.py  urls.py  views.py
webcentral/src/TechnicalStandards/: admin.py  apps.py  data_export.py  data_import.py  models.py  tests.py  translation.py  urls.py  views.py
webcentral/src/businessModel/: admin.py  apps.py  data_export.py  data_import.py  models.py  tests.py  urls.py  views.py
webcentral/src/common/: _test_db_diff.py  _test_translator.py  admin.py  apps.py  data_export.py  data_import.py  middleware.py  models.py  serializers.py  test_db_diff.py  test_translator.py  test_update.py  tests.py  translation.py  translator.py  urls.py  views.py
webcentral/src/component_list/: admin.py  apps.py  data_import.py  models.py  serialzers.py  tests.py  translation.py  urls.py  views.py
webcentral/src/criteria_catalog/: admin.py  apps.py  data_import.py  models.py  tests.py  translation.py  views.py
webcentral/src/data_sufficiency/: apps.py  data_import.py  models.py  tests.py  translation.py
webcentral/src/keywords/: admin.py  models.py
webcentral/src/pages/: apps.py  urls.py  views.py
webcentral/src/positive_environmental_impact/: admin.py  apps.py  data_import.py  models.py  tests.py  translation.py
webcentral/src/project_listing/: DatabaseDifference.py  admin.py  apps.py  data_import.py  models.py  tests.py  urls.py  views.py
webcentral/src/protocols/: admin.py  apps.py  data_export.py  data_import.py  models.py  tests.py  translation.py  urls.py  views.py
webcentral/src/publications/: __init__.py  bibtex.py  data_export.py  data_import.py  fields.py  six.py  tests.py  translation.py  urls.py  utils.py  views.py
webcentral/src/templates/: 400.html  403.html  404.html  500.html  base-startpage.html  base.html
webcentral/src/tests/: testDatabaseFilling.py  testRunScript.py
webcentral/src/tools_over/: admin.py  apps.py  data_export.py  data_import.py  models.py  tests.py  translation.py  urls.py  views.py
webcentral/src/use_cases/: admin.py  data_import.py  models.py  test_translator.py  tests.py  translation.py  urls.py  views.py
webcentral/src/user_integration/: admin.py  apps.py  data_import.py  models.py  translation.py  urls.py  views.py
webcentral/src/weatherdata_over/: admin.py  apps.py  models.py  translation.py  urls.py  views.py
webcentral/src/webcentral_app/: asgi.py  routing.py  settings.py  urls.py  views.py  wsgi.py
webcentral/test/: requirementsTesting.txt
webcentral/test/01_import_export_web/: test_web_import.py
webcentral/test/02_docker/: testDockerCompose.py
webcentral/test/05_testEvaluationPreprocessing/: testPrePro.py
webcentral/test/06_system_test/: testrunner.py
webcentral/test/07_test_run_script/: test_run_script.py
(+1435 files in other folders)
