[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = 'wissenplattEWB'
version = '0.1'
authors = [
    {name = "Falk Cudok"},
    {name = "Felix Rehmann"},
    {name = "Rita Streblow"},
    {name = "Martin Tobias Degner"},
    {name = "Siling Chen"},
    {name = "Ibukun Odeyemi"},
    {name = "Kaifeng Xu"},
    {name = "Ngoc Long Nguyen"},
    {name = "Johanna Tengler"},
    {name = "Marius Bieker"},
    {name = "Sarah Wutz"},
    {name = "Torsten Grothmann"},
    {name = "Jan Kegel"},
    {name = "Swantje Gährs"},
    {name = "Astrid Aretz"},
    {name = "Isabel Kiefaber"},
    {name = "Valentin Rupp"},
    {name = "Max von Grafenstein"},
    {name = "Julie Heumüller"},
    {name = "Otto Kolless"},
    {name = "Frido Uebachs"},
]
description = "WenDE - Wissensplattform: is a platform providing knowledge about tool and data for the researcher community of the EnergieWendeBauen."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: Release to manufacturing (RTM)", # see https://en.wikipedia.org/wiki/Software_release_life_cycle
    "License :: MIT",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "channels==4.0.0",
    "dash==2.9.3",
    "Django==4.2.1",
    "django-plotly-dash==2.3.1",
    "numpy==1.24.3",
    "pandas==2.2.2",
    "plotly==5.14.1",
    "Pillow==10.3.0",
    "psycopg2-binary==2.9.6",
    "PyYAML==6.0",
    "wetterdienst==0.88.0",
    "django-modeltranslation",
    "django-csp",
    "django-extensions==3.1.5",
    "SQLAlchemy==2.0.10",
    "uwsgi>=2.0.19.1,<2.1",
    "openpyxl", 
    "django-webpack-loader",
    "python-docx",
    "regex",
    "polars==0.20.25"
]

# root folder of the python/django not found automatically
[tool.setuptools.packages.find]
where = ["."]
#include = ["pkg*"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[project.optional-dependencies]
dev = [
    "pylint",
    "black",
    "sphinx",
    "myst-parser",
    "deepl",
]
test = [
    "coverage[toml] ==7.4", # [toml] not needed using micromanba, maybe also new python version
    "xlsxwriter",
]

[tool.pylint]
ignore-patterns = [
  "000*",
  "manage.py",
  "__init__.py",
  "test*",
  "src/pages/views.py",
]
disable = [
  "W0212", # warning of access to class protected method
  "E1101", # class has no object ... error 
  "W0613", # ignore unused argument error
  "R0903", 
  "invalid-name", # no error for snakeCase is shown 
  "R0914", # no error for too many local variables is shon
  "W0201", # attribute definied outside of __init__
  "W1514", # using open without specifying encoding
  "R0913", # too many arguments (if more then 5 arguements)
  "R1710", # all return statements should return the same type
  "W0246", # Useless parent or super() delegation in method '__init__' (useless-parent-delegation)
  "E0401", # unable to import module xy
]

[tool.pylint.format]
max-line-length = 80

[tool.pylint.basic]
variable-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"

[tool.djlint]
profile = "django"
indent = 2
max_line_length=80
max_blank_lines=1
close_void_tags=true
include="H017"

[tool.black]
line-length = 80
